quick mobile layout fix: shrine layout is flexbox on mobile view

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -100,18 +100,14 @@ main {
     }
   }
   #personal {
-    display: grid; grid-gap: var(--padding); height: 15rem;
-    background-color: $white; color: $black; padding: var(--padding) 0;
-    grid: 1fr 2fr / 1fr 1.75fr 1fr;
-    > * {
+    display: flex; flex-direction: column; gap: var(--padding); height: 15rem;
+    background-color: $white; color: $black; padding: var(--padding);
+    h2 {
+      text-align: center; margin: var(--padding);
+    }
+    > a {
       background-color: red; margin: 0;
       width: 100%; height: 100%;
-    }
-    h2 {grid-area: 1/2/1/2;}
-    a {
-      &:nth-child(2) {grid-area: 1/1/span 2/2;}
-      &:nth-child(3) {grid-area: 2/2/2/2;}
-      &:nth-child(4) {grid-area: 1/3/span 2/3;}
     }
   }
 }
@@ -139,6 +135,21 @@ main {
       flex-direction: row; width: 95%;
       margin: var(--padding) auto calc(var(--padding) * 2);
       #statuscafe { flex-basis: 55%; flex-shrink: 0; }
+    }
+    #personal {
+      display: grid; grid-gap: var(--padding); height: 15rem;
+      background-color: $white; color: $black; padding: var(--padding) 0;
+      grid: auto 1fr / 1fr 1.75fr 1fr;
+      h2 {margin: var(--padding) 0; grid-area: 1/2/1/2;}
+      > a {
+        background-color: red; margin: 0;
+        width: 100%; height: 100%;
+      }
+      a {
+        &:nth-child(2) {grid-area: 1/1/span 2/2;}
+        &:nth-child(3) {grid-area: 2/2/2/2;}
+        &:nth-child(4) {grid-area: 1/3/span 2/3;}
+      }
     }
   }
 }
